import shared from "../video-shared";

shared();
